cluster/apps/untappi-go/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: untappi-go
  labels:
    app.kubernetes.io/part-of: untappi-go
