cluster/apps/untappi-go/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: untappi-go-api
  namespace: untappi-go
  labels:
    app.kubernetes.io/part-of: untappi-go
spec:
  replicas: 2
  selector:
    matchLabels:
      app: untappi-go-api
  template:
    metadata:
      labels:
        app: untappi-go-api
        app.kubernetes.io/part-of: untappi-go
    spec:
      containers:
        - name: api
          image: ghcr.io/arsenikki/untappi-go:0.1.7
          imagePullPolicy: IfNotPresent
          command: ["/untappi", "api"]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: untappi-go-api
  namespace: untappi-go
  labels:
    app.kubernetes.io/part-of: untappi-go
spec:
  type: ClusterIP
  selector:
    app: untappi-go-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
